--- a/fly.toml
+++ b/fly.toml
@@ -1,22 +1,23 @@
-# fly.toml app configuration file generated for todo-backend-small-water-1584 on 2025-11-20T02:28:29+05:30
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
-app = 'todo-backend-small-water-1584'
+app = 'todo-backend-alyu2a5'
 primary_region = 'bom'
 
 [build]
 
 [http_service]
-  internal_port = 8081
-  force_https = true
-  auto_stop_machines = 'stop'
-  auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+internal_port = 8081
+force_https = true
+auto_stop_machines = 'stop'
+auto_start_machines = true
+min_machines_running = 0
+processes = ['app']
+
+[env]
+MYSQL_HOST = "db"
+MYSQL_DATABASE = "tododb"
+MYSQL_USERNAME = "root"
+# MYSQL_PASSWORD will need to be set via fly secrets
 
 [[vm]]
-  memory = '1gb'
-  cpu_kind = 'shared'
-  cpus = 1
+memory = '1gb'
+cpu_kind = 'shared'
+cpus = 1
