--- a/fly.toml
+++ b/fly.toml
@@ -1,23 +1,23 @@
-app = 'todo-backend-alyu2a5'
+# fly.toml app configuration file generated for todo-backend-okcwdg on 2025-11-19T21:45:51Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'todo-backend-okcwdg'
 primary_region = 'bom'
 
 [build]
 
 [http_service]
-internal_port = 8081
-force_https = true
-auto_stop_machines = 'stop'
-auto_start_machines = true
-min_machines_running = 0
-processes = ['app']
-
-[env]
-MYSQL_HOST = "db"
-MYSQL_DATABASE = "tododb"
-MYSQL_USERNAME = "root"
-# MYSQL_PASSWORD will need to be set via fly secrets
+  internal_port = 8081
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
-memory = '1gb'
-cpu_kind = 'shared'
-cpus = 1
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 1024
