Reverse all data at the 1st step

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,40 +1,40 @@
-# Basic git and IDE files
-.git
-.gitignore
-README.md
-HELP.md
+# flyctl launch added from .gitignore
+**\HELP.md
+**\target
+**\.mvn\wrapper\maven-wrapper.jar
+!**\**\src\main\**\target
+!**\**\src\test\**\target
 
-# Build outputs
-target/
-.mvn/wrapper/maven-wrapper.jar
+### STS ###
+**\.apt_generated
+**\.classpath
+**\.factorypath
+**\.project
+**\.settings
+**\.springBeans
+**\.sts4-cache
 
-# IDE files
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-.idea
-*.iws
-*.iml
-*.ipr
+### IntelliJ IDEA ###
+**\.idea
+**\*.iws
+**\*.iml
+**\*.ipr
 
-# NetBeans
-nbproject/private
+### NetBeans ###
+nbproject\private
 nbbuild
 dist
 nbdist
 .nb-gradle
-build/
+**\build
+!**\**\src\main\**\build
+!**\**\src\test\**\build
 
-# VS Code
-.vscode/
+### VS Code ###
+**\.vscode
 
-# Fly.io
+# flyctl launch added from .idea\.gitignore
+# Default ignored files
+.idea\shelf
+.idea\workspace.xml
 fly.toml
-
-# Temporary files
-*.tmp
-*.log
