--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,19 +1,21 @@
 server:
   port: 8081
+  address: 0.0.0.0  # Add this line to listen on all interfaces
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     password:
     username: root
     url: jdbc:mysql://db:3306/tododb?useSSL=true&requireSSL=false&createDatabaseIfNotExist=true
-#    url: jdbc:mysql://localhost:3306/tododb?useSSL=true&requireSSL=false&createDatabaseIfNotExist=true
 
   jpa:
     hibernate:
       ddl-auto: update
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-      dialect: MySQL8Dialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
 logging:
   level:
     org.springframework: DEBUG
